# Fast-API-Application

./: dependency_injection.py  main.py  models.py  pyproject.toml
API/: users.py
Archiv/: main2.py
