[tool.poetry]
name = "fast-api-application"
version = "0.1.0"
description = "Fast API Application"
authors = ["Gubanov Oleksandr <future.htm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
uvicorn = "^0.27.0"
pydantic = "^2.11.3"
pydentic = "^0.0.1.dev3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"